# OLMO

./: .claudeignore  .env.example  .geminiignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  ECOSYSTEM.md  GEMINI.md  HANDOFF.md  Makefile  PENDENCIAS.md  README.md  VALUES.md  __main__.py  docker-compose.yml  orchestrator.py  package-lock.json  package.json  pyproject.toml
.archive/: ADVERSARIAL-AUDIT-S81.md
.claude/: .heartbeat  .last-insights  BACKLOG.md  CATALOG.md  context-essentials.md  gemini-adversarial-drive-package.json  gemini-adversarial-output.txt  gemini-adversarial-v2.txt  mockup-importancia-A.html  mockup-importancia-B.html  settings.json  statusline.sh  stop1-telemetry.jsonl
.claude/agents/: codex-xhigh-researcher.md  debug-adversarial.md  debug-archaeologist.md  debug-architect.md  debug-patch-editor.md  debug-strategist.md  debug-symptom-collector.md  debug-validator.md  evidence-researcher.md  gemini-deep-research.md  gemini-dlite-research.md  literature.md  mbe-evaluator.md  mcp-query-runner.md  medical-researcher.md  notion-ops.md  opus-researcher.md  perplexity-auditor.md  perplexity-dlite-research.md  perplexity-sonar-research.md  qa-engineer.md  quality-gate.md  reference-checker.md  repo-janitor.md  researcher.md  sentinel.md  systematic-debugger.md
.claude/hooks/: README.md  allow-plan-exit.sh  build-monitor.sh  chaos-inject-post.sh  check-evidence-db.sh  cost-circuit-breaker.sh  coupling-proactive.sh  crossref-precommit.sh  guard-bash-write.sh  guard-generated.sh  guard-lint-before-build.sh  guard-mcp-queries.sh  guard-pause.sh  guard-product-files.sh  guard-qa-coverage.sh  guard-read-secrets.sh  guard-research-queries.sh  guard-secrets-precommit.sh  guard-secrets.sh  guard-worker-write.sh  guard-write-unified.sh  lint-on-edit.sh  model-fallback-advisory.sh  momentum-brake-arm.sh  momentum-brake-clear.sh  momentum-brake-enforce.sh  nudge-checkpoint.sh  post-bash-handler.sh  post-global-handler.sh  task-completed-gate.sh
.claude/insights/: failure-registry.json  latest-report.md
.claude/metrics/: baseline.md
.claude/plans/: ACTIVE-S224-consolidation-plan.md  ACTIVE-S225-SHIP-roadmap.md  ACTIVE-S225-consolidacao-plan.md  ACTIVE-S227-memory-to-living-html.md  ACTIVE-snoopy-jingling-aurora.md  BACKLOG-S220-codex-adversarial-report.md  README.md  S199-gemini-qa-diagnostic.md  S199-research-findings.md  S213-hooks-memory-state-of-art.md  S232-readiness-multimodel-agents-memory.md  S234-content-moratorium-active.md  S239-C5-continuation.md  S262-research-mjs-additive-migration.md  abundant-pondering-zebra.md  async-orbiting-toucan.md  audit-p5-p6-violations.md  batch-6-findings.md  batch-7-findings.md  (+48 more)
.cursor/: mcp.json
.github/: dependabot.yml  pull_request_template.md
03-Resources/: albumin-cirrhosis.md  albumin-upper-gastrointestinal-bleeding.md  albumina-hemorragia-digestiva-alta.md  albumina-variceal-bleeding.md  ascite.md  cirrose.md  restricao-sodica-ascite.md  workflow-mbe-opus-classificacao.md
agents/: __init__.py
config/: ecosystem.yaml  loader.py  rate_limits.yaml  tools_ecosystem.yaml  workflows.yaml
docs/: ADVERSARIAL-FIX-S51.md  ADVERSARIAL-REVIEW-S50.md  ARCHITECTURE.md  BEST_PRACTICES.md  CHANGELOG-archive.md  CODEX-AUDIT-S57.md  CODEX-AUDIT-S60.md  CODEX-AUDIT-S70.md  CODEX-FIXES-S58.md  CODEX-MEMORY-AUDIT-S61.md  CODEX-REVIEW-S33.md  CODEX-REVIEW-S37.md  CODEX-REVIEW-S40.md  GETTING_STARTED.md  OBSIDIAN_CLI_PLAN.md  PIPELINE_MBE_NOTION_OBSIDIAN.md  S63-AUDIT-REPORT.md  SYNC-NOTION-REPO.md  TREE.md  WORKFLOW_MBE.md  coauthorship_reference.md  codex-adversarial-s104.md  keys_setup.md  mcp_safety_reference.md  pmid-verification-S151.md
hooks/: ambient-pulse.sh  apl-cache-refresh.sh  hook-calibration.sh  loop-guard.sh  notify.sh  nudge-commit.sh  post-compact-reread.sh  post-tool-use-failure.sh  pre-compact-checkpoint.sh  session-compact.sh  session-end.sh  session-start.sh  stop-chaos-report.sh  stop-crossref-check.sh  stop-detect-issues.sh  stop-failure-log.sh  stop-hygiene.sh  stop-metrics.sh  stop-notify.sh  stop-quality.sh  stop-scorecard.sh  stop-should-dream.sh  success-capture.sh
resources/: README.md  albumin-variceal-bleeding-cirrhosis.md  best-practices-cowork-skills-2026-04-08.md  sodium-restriction-cirrhotic-ascites.md  workflow-mbe-opus-classificacao.md
scripts/: atualizar_tema.py  fetch_medical.py  kpi-snapshot.mjs  obsidian-cli-diagnostico.ps1  obsidian-debug.ps1  obsidian.cmd  obsidian.ps1  test-obsidian-cli.ps1  testar-workflow.ps1  verificar-tudo.ps1  workflow_cirrose_ascite.py
skills/: __init__.py
subagents/: __init__.py
templates/: chatgpt_audit_prompt.md  prompts.yaml
tests/: conftest.py
tools/: integrity.sh  zone-calibrator.html
wiki/: README.md  _index.md
workflows/: efficient_workflows.yaml  medical_workflow.yaml
(+722 files in other folders)
