[project]
name = "olmo"
version = "0.3.0"
description = "OLMO — Claude Code agent system for medical education (consumer-only per ADR-0002). Post-S232 v6: Python runtime purged; orquestracao real em Claude Code (agents + skills + hooks)."
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Lucas Peres Miachon"}]
keywords = ["ai-agents", "medical-research", "evidence-based-medicine", "claude-code"]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["content/", ".claude/skills/skill-creator/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF", "PTH", "S", "ASYNC"]
ignore = ["S112", "S314", "ASYNC240"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"scripts/**" = ["T20"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
